add styles and cards

--- a/profile-viewer/src/pages/homePage/homePage.styles.scss
+++ b/profile-viewer/src/pages/homePage/homePage.styles.scss
@@ -6,4 +6,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+ 
+  .right-menu{
+    background:grey;
+    width:100%;
+    height:100%
+  }
 }
