--- a/profile-viewer/src/components/user-card/user-card.styles.scss
+++ b/profile-viewer/src/components/user-card/user-card.styles.scss
@@ -8,19 +8,42 @@
   border-radius: 4px;
   box-shadow: 1px 1px 2px #fff;
   text-align: center;
-  padding:25px 5px 5px 5px;
+  padding: 25px 5px 5px 5px;
+  overflow: hidden;
 
-  .user-img{
-    height:60%;
-    width:70%;
+  .user-img {
+    height: 60%;
+    width: 70%;
     margin-bottom: 10px;
+  }
+
+  .status-container {
+    padding:5px 0;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    .status-icon {
+      height: 10px;
+      width: 10px;
+      border-radius: 50%;
+      margin:0 5px;
+    }
+    .green {
+      background-color: green;
+    }
+
+    .red {
+      background-color: red;
+    }
   }
 }
 
-.user-card:nth-child(1){
-    margin-top: 10vh;
+.user-card:nth-child(1) {
+  margin-top: 10vh;
 }
 
-.user-card:last-child{
-    margin-bottom: 10vh;
+.user-card:last-child {
+  margin-bottom: 10vh;
 }
