content component created and add to the homepage and profiles page

--- a/profile-viewer/src/pages/profiles/profiles.styles.scss
+++ b/profile-viewer/src/pages/profiles/profiles.styles.scss
@@ -4,6 +4,5 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #e84d80;
-    color:blue;
+    background: linear-gradient(gray,#5b0552);
 }
