--- a/profile-viewer/src/components/user-card/user-card.styles.scss
+++ b/profile-viewer/src/components/user-card/user-card.styles.scss
@@ -5,8 +5,8 @@
   border: 1px solid grey;
   margin: 3vh auto;
   color: #b800c8;
-  border-radius: 4px;
-  box-shadow: 1px 1px 2px #fff;
+  border-radius: 6px;
+  box-shadow: 0 2px 6px 0 rgba(0,0,0,.1);
   text-align: center;
   padding: 25px 5px 5px 5px;
   overflow: hidden;
