--- a/profile-viewer/src/components/content/content.styles.scss
+++ b/profile-viewer/src/components/content/content.styles.scss
@@ -5,6 +5,7 @@
   margin: auto;
   overflow: scroll;
   scrollbar-width: none;
+  scroll-behavior: smooth;
 
   &::-webkit-scrollbar{
     display: none;
