--- a/profile-viewer/src/components/user-card/user-card.styles.scss
+++ b/profile-viewer/src/components/user-card/user-card.styles.scss
@@ -4,12 +4,18 @@
   background: #fff;
   border: 1px solid grey;
   margin: 3vh auto;
+  opacity: 0.7;
   color: #b800c8;
   border-radius: 6px;
-  box-shadow: 0 2px 6px 0 rgba(0,0,0,.1);
+  box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.1);
   text-align: center;
   padding: 25px 5px 5px 5px;
   overflow: hidden;
+  transition: box-shadow 0.25s,opacity 0.25s;
+
+  &:hover {
+    opacity: 1;
+  }
 
   .user-img {
     height: 60%;
@@ -18,7 +24,7 @@
   }
 
   .status-container {
-    padding:5px 0;
+    padding: 5px 0;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -28,7 +34,7 @@
       height: 10px;
       width: 10px;
       border-radius: 50%;
-      margin:0 5px;
+      margin: 0 5px;
     }
     .green {
       background-color: green;
