styling the app

--- a/profile-viewer/src/components/left-menu/left-menu.styles.scss
+++ b/profile-viewer/src/components/left-menu/left-menu.styles.scss
@@ -6,6 +6,7 @@
   overflow: scroll;
   scrollbar-width: none;
   position: relative;
+  margin-bottom: 12vh;
 
   &::-webkit-scrollbar {
     display: none;
