--- a/profile-viewer/src/pages/VisitedUsers/VisitedUsers.styles.scss
+++ b/profile-viewer/src/pages/VisitedUsers/VisitedUsers.styles.scss
@@ -1,17 +1,36 @@
-.visited-users{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    color: white;
-    align-items: center;
-    background: linear-gradient(gray,#5b0552);
+.visited-users {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  align-items: center;
+  background: linear-gradient(gray, #5b0552);
+  overflow: scroll;
+  scrollbar-width: none;
 
-    .card-container{
-        width:80vw;
-        margin: auto 10vw;
-        display: grid;
-        grid-gap: 5px;
-        grid-template-columns: repeat(auto-fill,minmax(240px,1fr));
+  h1{
+      padding-top: 10vh;
+  }
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  .card-container {
+    width: 80vw;
+    margin: 5vh 10vw;
+    padding-bottom: 6vh;
+    display: grid;
+    grid-gap: 4px;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+
+    .no-users {
+      display: flex;
+      width: 80vw;
+      height: 60vh;
+      justify-content: center;
+      align-items: center;
     }
+  }
 }
